<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="testappsample.curso.com.testappsample.LoginSucessActivity">

    <RelativeLayout
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login_message_success"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/login_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
